# needed since we skip the main jsoncpp cmake file that defines this
set(ARCHIVE_INSTALL_DIR lib)
set(BUILD_STATIC_LIBS ON)
set(BUILD_SHARED_LIBS OFF)
set(PROJECT_NAME "jsoncpp")
set(PROJECT_VERSION 1.9.5)
add_subdirectory(${at_media_deps_dir}/jsoncpp/src ${CMAKE_BINARY_DIR}/jsoncpp/src)
set(jsoncpp_includes ${at_media_deps_dir}/jsoncpp/include)
target_include_directories(jsoncpp_static PUBLIC ${jsoncpp_includes})
add_library(at_jsoncpp INTERFACE)
target_include_directories(at_jsoncpp INTERFACE ${jsoncpp_includes})
target_link_libraries(at_jsoncpp INTERFACE jsoncpp_static)
